Atualizar frontend: ajustes em EdicaoTarefas e listadetarefas

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
@@ -43,7 +44,17 @@
     "@babel/core": "^7.25.7",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.25.7",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
+    "jest": "^27.5.1",
     "webpack": "^5.95.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!axios)"
+    ]
   }
 }
